salesforce/10.0/modules/ROOT/pages/salesforce-connector-upgrade-migrate.adoc
= Upgrading and Migrating Salesforce Connector to 10.0 - Mule 4

Upgrade Anypoint Connector for Salesforce (Salesforce Connector) to version 10.x.

== Supported Upgrade Paths

[%header,cols="50a,50a"]
|===
|From Version | To Version
|9.x |10.x
|===

== Changes in This Release

This release contains the following changes:

* Removed deprecated connection types
* Made the following changes to some operations:
 ** Merged multiple operations into one
 ** Renamed some operations and parameters
 ** Changed some operation return types
* Redesigned the Replay ID functionality
* Changed the Mule TLS Context usage
* Improved the error types
* Removed the dependency on the Dozer library
* Removed the keep alive feature as a configurable option
+
The connector now automatically performs one API call every
14 minutes (Salesforce minimum TTL is 15 minutes), so the session no longer expires.

=== Changes in Connection Types

This release contains the following changes to connection types:

* Removed the following connection types:
** Username Password
** Basic Username Password
* Added connection pool functionality to improve multi-threading support.
+
With this functionality, each request sent to the API has its own headers and read timeout, which prevents the operation headers from being overridden with the wrong values when operations are executed simultaneously.
* Added a new *Security* tab for configuring TLS.
* Reordered the parameters to be more intuitive.
* Moved the `Read timeout` parameter from the provider configuration to the connector configuration.
* Removed the following parameters from the connector configuration:
** `Advanced reconnection params`
** `Allow field truncation support`
** `Assignment rule id`
** `Batch Sobject max depth`
** `Can clear fields by updating field value to null` +
See <<clear-fields,Clear Fields by Updating Field Value to Null>>
** `Client id`
** `Disable session invalidation`
** `Time object store`
** `Use default rule`

== Changed Operations, Parameters, and Return Types

In Salesforce 10.0, all operations contain the following new parameters:

* `Time unit`
* `Read timeout`

The following table shows other changes to operation names, input parameters, and return types:

// [cols="50,50"]
[%header%autowidth.spread]
|===
|Salesforce 9.x Operation | Changes in Salesforce 10.0

| Abort job v 2
a| Operation is now called Abort job bulk api v 2.

| Abort query job
a|  * Operation is now called Abort query job bulk api v 2.
* `Query job id` parameter is now called `Id`.

| Batch result
a| Return type is now Bulk Operation Result, which can be integrated with the Batch scope.

| Batch result stream
a| Return type is now InputStream.

| Create
a| Return type is now Bulk Operation Result, which can be integrated with the Batch scope.

| Delete
a| Return type is now Bulk Operation Result, which can be integrated with the Batch scope.

| Find duplicates by ids
a| Return type is now Ids List.

| Get all jobs v 2
a| * Operation is now called Get all jobs bulk api v 2.
* `Is pk chunking enabled` parameter is now called `Pk Chunking`.

| Get all query jobs
a| * Operation is now called Get all query jobs bulk api v 2.
* `Is pk chunking enabled` parameter is now called `Pk Chunking`.

| Get bulk job state bulk v 2
a| Operation is now called Get job state bulk api v 2.

| Get deleted
a| * Duration parameter is replaced by the `Start Date` and `End Date` parameters.
* `Type` parameter is now called `Object type`.

| Get query job info
a| * Operation is now called Get query job info bulk api v 2.
* `Query job` id parameter is now called `Id`.

| Get query job result
a| * Operation is now called Get query job result bulk api v 2.
* `Query job id` parameter is now called `Id`.

| Get updated objects
a| * `Initial Time Window` parameter is replaced by the `Start Date` and `End Date` parameters.
* `Type` parameter is now called `Object Type`.
* `Fields` and `Update Header` parameters were removed.
* Operation now returns only the IDs of the objects that were updated and the latest date covered.
+
** To obtain field values for the updated objects, use this operation followed by the Retrieve operation.
+
** To track the previous time updated objects were queried, save and retrieve values from the Object Store connector manually.
| Replay channel
a| Operation is now called Replay channel listener.

| Replay topic
a| Operation is now called Replay topic listener.

| Retrieve record failure bulk v 2
a| Operation is now called Retrieve job failed result bulk v 2.

| Retrieve record success bulk v 2
a| Operation is now called Retrieve job successful result bulk v 2.

| Subscribe channel
| Operation is now called Subscribe channel listener.

| Subscribe topic
| Operation is now called Subscribe topic listener.

| Update
a| Return type is now Bulk Operation Result, which can be integrated with the Batch scope.

| Upsert
a| `Type` parameter is now called `Object Type`.

|===

== Changes in Operations Metadata

There are no changes related to keys, input metadata, or output metadata.

== Removed Operations

The following operations were removed from Salesforce Connector:

//[cols="15%,35%,15%]
|===
|Removed Operation |Functionality Covered By

| Bulk info | Batch info operation
| Bulk info list | Batch info list operation
| Bulk result | Batch result operation
| Bulk result stream| Batch result stream operation
|Create bulk | Create job operation with an `insert` parameter and a Create Batch operation
| Create bulk for query | Create batch for query operation| Create single | Create operation
| Create multiple | Create operation
| Create multiple batch | Create batch operation
| Create multiple batch stream | Create batch stream operation
| Create multiple bulk | Create Job operation with a `create`
 parameter and a Create batch operation
 | Delete multiple | Delete operation
| Get deleted range | Get deleted objects operation
| Get updated | Get updated objects operation
| Hard delete bulk | Create Job operation with a `hardDelete` parameter and a Create batch operation
| Hard delete multiple | Create Job with a `hardDelete` parameter and a Create batch operation
| Query multiple result stream | Query result stream operation
| Query single | Query operation
| Non paginated query | Query operation
| Update bulk | Create job operation with an `update` parameter and a Create Batch operation
| Update multiple | Update operation
| Update multiple bulk | Create Job operation with an `update` parameter and a Create batch operation
| Update single	| Update operation| Delete multiple | Delete
| Upsert bulk | Create Job operation with an `upsert` parameter and a Create Batch operation
| Upsert multiple | Upsert operation
| Upsert multiple bulk | Create Job operation with an `upsert` parameter and a Create batch operation
| Get session id | This operation exposed the internal session ID used by the connector. This could impact the connection life-cycle with regular usage of the connector. It is recommended that you re-implement using the connector functionality.
|===

== Upgrade Prerequisites

Before you perform the upgrade, you must:

. Create a backup of your files, data, and configuration in case you need to restore to the previous version.
. Install Salesforce Connector v10.x to replace the Salesforce operations that were previously included in Salesforce Connector v9.x.

== Upgrade Steps

Follow these steps to perform the upgrade from Salesforce Connector v9.x to Salesforce Connector v10.x:

. In Anypoint Studio, create a Mule project.
. In the Mule Palette view, click *Search in Exchange*.
. In the *Add Dependencies to Project* window, enter `Salesforce` in the search field.
. In the *Available modules* section, select *Salesforce Connector - Mule 4* and click *Add*.
. Click *Finish*.
. Verify that the `salesforce-connector` dependency version is `10.x.x` in the `pom.xml` file, where `x.x` is the minor release and patch version number. For example, if you are upgrading to v10.0, the dependency version in the `pom.xml` file should be `10.0.0`.

Studio upgrades the connector automatically.

== Verify the Upgrade

After you install the latest version of the connector, follow these steps to verify the upgrade:

. In Studio, verify that there are no errors in the *Problems* or *Console* views.
. Check the project `pom.xml` file and verify that there are no problems.
. Test the connection and verify that the operations work.

[[clear-fields]]
== Clear Fields by Updating Field Value to Null

In Salesforce Connector 10.x, to clear a field, you must use an *Update* or *Upsert* request operation and set the name of the fields you want to nullify in the *fieldsToNull* field, for example:

image::salesforce-connector-10-set-fields-to-null.png[Set a field to null ]

== Troubleshooting

If there are problems with caching the parameters and caching the metadata, try restarting Studio.

== Revert the Upgrade

If it is necessary to revert to the previous version of Salesforce Connector, change the `salesforce-connector` dependency version in the project's `pom.xml` file to the previous version.

You must update the project's `pom.xml` file in Anypoint Studio.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
